--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -93,8 +93,7 @@
 					À propos de moi
 				</h2>
 				<p class="text-lg lg:text-xl text-gray-600 leading-relaxed mb-8">
-					Je suis un développeur web junior passionné avec une expertise dans les technologies web modernes. 
-																																																		                    J'aime créer des sites web beaux et fonctionnels qui offrent d'excellentes expériences utilisateur.
+					Je suis un développeur web junior passionné avec une expertise dans les technologies web modernes. J'aime créer des sites web beaux et fonctionnels qui offrent d'excellentes expériences utilisateur.
 				</p>
 				<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 					<div class="p-6 border rounded-lg">
